Fix horizontal layout overflow

--- a/resume/index.css
+++ b/resume/index.css
@@ -27,7 +27,7 @@
 		font-size: 0.8947368421053em; /* 17px /19 */
 	}
 }
-@media (min-width: 60em) { /* 960px */
+@media (min-width: 61.25em) { /* 980px /16 */
 	.resume-toc {
 		margin-bottom: -1.944444444444em; /* -35px /18 */
 		font-size: 0.8571428571429em; /* 18px /21 */
