--- a/web/css/_socialmenu.scss
+++ b/web/css/_socialmenu.scss
@@ -41,7 +41,35 @@
 }
 
 .icon-inline {
-  display: inline-block;
+	display: inline-block;
 	padding-left: 2.25rem; /* 36px /16 */
-  margin-left: 0.375rem; /* 6px /16 */
+	margin-left: 0.375rem; /* 6px /16 */
+}
+
+/* Small viewport navigation */
+
+@media (max-width: $oneColLayoutMaxWidth) {
+	.rail .navigation {
+		display: flex;
+		justify-content: center;
+		max-width: 31em;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.rail .social {
+		padding-left: 2em;
+		padding-right: 2em;
+		flex-basis: 16em;
+	}
+	.rail .navigation .tags:first-child {
+		text-align: left;
+	}
+	.rail .navigation .social + .tags {
+		text-align: right;
+	}
+	.rail .navigation .tags a[href] {
+		padding-left: 1em;
+		padding-right: 1em;
+		white-space: nowrap;
+	}
 }
