--- a/web/css/_theme.scss
+++ b/web/css/_theme.scss
@@ -195,7 +195,7 @@ h5,
 /* Layout */
 .rail {
 	padding: 1em 1em .5em;
-	margin-bottom: 1.5em;
+	margin-bottom: .5em;
 	border-bottom: 1px solid #dedede;
 	text-align: center;
 }
@@ -244,7 +244,7 @@ h5,
 	}
 }
 @supports (display: grid) {
-	@media (min-width: 32.5em) { /* 520px */
+	@media (min-width: 40.625em) { /* 650px */
 		.tmpl-list .content-main,
 		.tmpl-page .content-main {
 			max-width: none;
@@ -292,7 +292,7 @@ h5,
 		}
 	}
 
-	@media (min-width: $twoColLayoutMinWidth) { /* 960px */
+	@media (min-width: $twoColLayoutMinWidth) { /* 980px */
 		.rail {
 			padding: 0;
 			border-bottom-width: 0;
@@ -323,7 +323,7 @@ h5,
 		}
 		.tmpl-page .content-main { grid-area: 1/2/4/3; }
 		.tmpl-page .rail { grid-area: 1/3/4/4; } 
-		.tmpl-page .hamburger { grid-area: 1/4/4/5; }
+		.tmpl-page .hamburger { grid-area: 1/3/4/4; }
 
 		.body-gradient:after {
 			content: "";
@@ -508,7 +508,7 @@ h5 {
 }
 
 .primary-title {
-	font-size: 2.5em;
+	font-size: 2.3em;
 	line-height: 1;
 	letter-spacing: -1px;
 }
@@ -521,7 +521,7 @@ h5 {
 	.primary-title {
 		font-size: 3.5em;
 		letter-spacing: -0.025em;
-		font-size: clamp(2.5em, 4.5vw, 3.5em);
+		font-size: clamp(2.3em, 4.5vw, 3.5em);
 	}
 }
 
@@ -602,7 +602,7 @@ pre > code {
 	background-color: #272822;
 	color: #f8f8f2;
 }
-@media (min-width: 60em) { /* 960px */
+@media (min-width: 60em) { /* 980px */
 	pre {
 		border-radius: 0.6153846153846em; /* 8px /13 */
 	}
@@ -672,7 +672,7 @@ th.numeric {
 /* Logo and Rail */
 .rail .header {
 	display: block;
-	margin-bottom: .5em;
+	margin-bottom: .25em;
 	text-decoration: none;
 }
 .rail h1 {
@@ -680,7 +680,7 @@ th.numeric {
 	display: inline-block;
 	margin: 0 0 .1em 0;
 	vertical-align: bottom;
-	@include webfontBold;
+	@include webfont;
 
 	@media (max-width: $oneColLayoutMaxWidth) {
 		text-align: center;
@@ -696,9 +696,8 @@ th.numeric {
 	margin-bottom: -2px;
 }
 .rail .navigation {
-	margin: 0 0 .5em;
+	margin: 0;
 }
-
 @supports (display: grid) {
 	@media (min-width: $twoColLayoutMinWidth) {
 		.rail .header {
